--- a/Views/Declare/SpecialSupervision_List.cshtml
+++ b/Views/Declare/SpecialSupervision_List.cshtml
@@ -1,50 +1,88 @@
 ﻿<script type="text/javascript">
+    //1 查询条件 --日期
+    var search_condition_date = [
+        { code: 'guanwujieshou', name: '关务接受日期', selected: true },
+        { code: 'baoruhaiguan', name: '报入海关日期' },
+        { code: 'shandankaishi', name: '删单开始日期' },
+        { code: 'shandanwancheng', name: '删单完成日期' },
+        { code: 'gaidankaishi', name: '改单开始日期' },
+        { code: 'gaidanwancheng', name: '改单完成日期' },
+        { code: 'chayanzhilingxiafa', name: '查验指令下发日期' },
+        { code: 'chayankaishi', name: '查验开始日期' },
+        { code: 'chayanwancheng', name: '查验完成日期' },
+        { code: 'danzhengfangxing', name: '单证放行日期' },
+        { code: 'shiwufangxing', name: '实物放行日期' },
+        { code: 'danzhengfangxing', name: 'FWO订单号' },
+        { code: 'shiwufangxing', name: 'FO号' },
+    ];
+    //2 查询条件  --单据号
+    var search_code = [
+        {
+            code: 'jiedan', name: '报关单号', selected: true
+        },
+        { code: 'lihuo', name: '集装箱号' },
+        { code: 'koufangxing', name: '转关单号' },
+        { code: 'koufangxing', name: 'FWO订单号' },
+        { code: 'koufangxing', name: 'FO号' }
+    ];
     $(function () {
         loadListGrid('Declare/SpecialSupervision_Edit');
+        $('#searchform #search_condition_date').combobox({
+            data: search_condition_date,
+            valueField: 'code',
+            textField: 'name'
+        });
+        $('#searchform #search_code').combobox({
+            data: search_code,
+            valueField: 'code',
+            textField: 'name'
+        });
     })
-</script> 
+</script>
 <div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="特殊监管" style="height:auto;min-height:500px;max-height:800px"
-               data-options="queryParams:{TYPE:'SpecialSupervision'}">
+               data-options="queryParams:{BUSITYPE:11}">
             <thead>
                 <tr>
-                    <th data-options="field: 'ck', checkbox: true"></th>
-                    <th data-options="field:'CODE',sortable:true">业务编号</th>
-                    <th data-options="field:'text',sortable:true">关务编号</th>
-                    <th data-options="field:'ASSOCIATEPEDECLNO',sortable:true">报关单号</th>
-                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
-                    <th data-options="field:'text',sortable:true">关务状态</th>
-                    <th data-options="field:'BUSITYPE',sortable:true">业务类型</th>
-                    <th data-options="field:'BUSIUNITNAME',sortable:true">企业</th>
-                    <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
-                    <th data-options="field:'DECLSHEETNUM',sortable:true">报关单张数</th>
-                    <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
-                    <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
-                    <th data-options="field:'text',sortable:true">备注</th>
-                    <th data-options="field:'text',sortable:true">OPS接单人</th>
-                    <th data-options="field:'text',sortable:true">关务接单人</th>
-                    <th data-options="field:'GUOJITIME',sortable:true">过机时间</th>
-                    <th data-options="field:'GUOJIUSERNAME',sortable:true">过机人</th>
-                    <th data-options="field:'LIDANTIME',sortable:true">理单时间</th>
-                    <th data-options="field:'LIDANUSERNAME',sortable:true">理单人</th>
-                    <th data-options="field:'LIHUOZILIAOTIME',sortable:true">理单资料时间</th>
-                    <th data-options="field:'LIHUOZILIAOUSERNAME',sortable:true">理单资料人</th>
-                    <th data-options="field:'BAOGUANTIME',sortable:true">报关时间</th>
-                    <th data-options="field:'BAOGUANUSERNAME',sortable:true">报关人</th>
+                    <th data-options="field: 'ID',width:80,checkbox:true"></th>
+                    <th data-options="field:'YWBH',sortable:true">业务编号</th>
+                    <th data-options="field:'DECLWAY',sortable:true">报关方式</th>
+                    <th data-options="field:'CONTRACTNO',sortable:true">发票合同号</th>
+                    <th data-options="field:'GOODSNUM',sortable:true">件数</th>
+                    <th data-options="field:'GOODSWEIGHT',sortable:true">重量</th>
+                    <th data-options="field:'FWONO',sortable:true">FWO订单号</th>
+                    <th data-options="field:'FOCUSTOMSNO',sortable:true">FO号</th>
+                    <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">关区代码</th>
+                    <th data-options="field:'GUANWUJIESHOUTIME',sortable:true">关务接受时间</th>
+                    <th data-options="field:'GUANWUJIESHOUUSERNAME',sortable:true">关务接受人</th>
+                    <th data-options="field:'BAORUHAIGUANTIME',sortable:true">报入海关时间</th>
+                    <th data-options="field:'BAORUHAIGUANUSERNAME',sortable:true">报入海关人</th>
+                    <th data-options="field:'SHANDANKAISHITIME',sortable:true">删单开始时间</th>
+                    <th data-options="field:'SHANDANKAISHIUSERNAME',sortable:true">删单开始人</th>
+                    <th data-options="field:'SHANDANWANCHENGTIME',sortable:true">删单完成时间</th>
+                    <th data-options="field:'SHANDANWANCHENGUSERNAME',sortable:true">删单完成人</th>
+                    <th data-options="field:'GAIDANKAISHITIME',sortable:true">改单开始时间</th>
+                    <th data-options="field:'GAIDANKAISHIUSERNAME',sortable:true">改单开始人</th>
+                    <th data-options="field:'GAIDANWANCHENGTIME',sortable:true">改单完成时间</th>
+                    <th data-options="field:'GAIDANWANCHENGUSERNAME',sortable:true">改单完成人</th>
                     <th data-options="field:'DANZHENGFANGXINGTIME',sortable:true">单证放行时间</th>
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
-                    <th data-options="field:'SHIWUFANGXINGUSERNAME'">实物放行人</th>
-                    <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">申报关区</th>
-                    <th data-options="field:'text',sortable:true">OPS接单时间</th>
-                    <th data-options="field:'text',sortable:true">关务接单时间</th>
-                    <th data-options="field:'text',sortable:true">打印状态</th>
-                    <th data-options="field:'text',sortable:true">急货标识</th>
-                    <th data-options="field:'text',sortable:true">出单日期</th>
-                    <th data-options="field:'INOUTTYPE',sortable:true">进出口类型</th>
+                    <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
+                    <th data-options="field:'DECLSHEETNUM',sortable:true">报关单张数</th>
+                    <th data-options="field:'LAWCONDITION',sortable:true">是否法检</th>
+                    <th data-options="field:'ASSOCIATEPEDECLNO',sortable:true">报关单号</th>
+                    <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
+                    <th data-options="field:'CLEARANCENO',sortable:true">通关单号</th>
+                    <th data-options="field:'LIDANUSERNAME',sortable:true">理单人</th>
+                    <th data-options="field:'STATUS',sortable:true">实物放行状态</th>
+                    <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
+                    <th data-options="field:'TURNPRENO',sortable:true">转关转录单号</th>
+                    <th data-options="field:'text',sortable:true">关务状态</th>
+                    <th data-options="field:'PASSMODE',sortable:true">分批放行</th>
+                    <th data-options="field:'PASSMODE',sortable:true">申请放行</th>
                     <th data-options="field:'text',sortable:true">海关通关状态</th>
-                    <th data-options="field:'REPWAYID',sortable:true">申报方式</th>
                     <th data-options="field:'text',sortable:true">签收号</th>
                     <th data-options="field:'text',sortable:true">签收人</th>
                     <th data-options="field:'text',sortable:true">签收日期</th>
@@ -53,13 +91,17 @@
                 </tr>
             </thead>
         </table>
-
         <div id="tb">
             <div class="tb_search">
                 <form id="searchform" method="post">
                     <table>
                         <tr>
-
+                            <td class="search_margin">
+                                <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
+                            </td>
+                            <td>
+                                <input class="easyui-textbox value" type="text" name="ordercode_value" />
+                            </td>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
                                     <option>业务方式</option>
@@ -68,23 +110,6 @@
                             <td>
                                 <select class="easyui-combobox combobox_width value" id="service_model" panelheight="auto" name="service_model"></select>
                             </td>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
-                            </td>
-                            <td>
-                                <input class="easyui-textbox value" type="text" name="ordercode_value" />
-                            </td>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" id="search_operator" panelheight="auto" name="oprname"></select>
-                            </td>
-                            <td>
-                                <input class="easyui-textbox value" type="text" name="oprname_value" />
-                            </td>
-
-
-
                             <td class="search_margin">
                                 <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
                             </td>
@@ -95,7 +120,6 @@
                                 <input class="easyui-datebox value" name="stopdate" placeholder="结束时间">
                             </td>
                         </tr>
-
                         <tr>
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
@@ -103,73 +127,31 @@
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox value combobox_width" id="customs_state"  panelheight="auto" name="customs_state"></select>
+                                <select class="easyui-combobox value" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
                             </td>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" panelheight="auto">
-                                    <option>业务对象</option>
-                                </select>
-                            </td>
-                            <td>
-                                <select class="easyui-combobox combobox_width value" id="business_object" panelheight="auto" name="business_object"></select>
-                            </td>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" panelheight="auto">
-                                    <option>急货标识</option>
-                                </select>
-                            </td>
-                            <td>
-                                <select class="easyui-combobox combobox_width value is_check" panelheight="auto" name=""></select>
-                            </td>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" panelheight="auto">
-                                    <option>报关资料齐全标志</option>
-                                </select>
-                            </td>
-                            <td>
-                                <select class="easyui-combobox combobox_width value is_check" panelheight="auto" name=""></select>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td class="search_margin">
-                                <select class="easyui-combobox" panelheight="auto">
-                                    <option>文档类型</option>
-                                </select>
-                            </td>
-                            <td>
-                                <select class="easyui-combobox value combobox_width" id="doc_type"  panelheight="auto" name="doc_type"></select>
-                            </td>
-
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
                                     <option>申报方式</option>
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox value combobox_width" id="declare_type" panelheight="auto" name="declare_type"></select>
+                                <select class="easyui-combobox combobox_width value" id="declare_type" panelheight="auto" name="declare_type"></select>
                             </td>
                         </tr>
-
                     </table>
                 </form>
             </div>
             <div class="tb_but">
                 <div class="but_left">
-                    @*<a class="btn btn-primary btn-xs" href="javascript:void(0)"><i class="icon-search"></i> 搜索</a>
-                    <a class="btn btn-primary btn-xs" href="javascript:void(0)"><i class="icon-refresh"></i> 重置</a>*@
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="search_form()"><i class="icon-refresh"></i> 批量更新</a>
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="reset_form()"><i class="fa fa-share-square-o" aria-hidden="true"></i> 导出</a>
                 </div>
                 <div class="but_right">
                     <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="search_form()"><i class="icon-search"></i> 搜索</a>
-                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="reset_form()"><i class="icon-refresh"></i> 重置</a>
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="reset_form()"><i class="fa fa-retweet" aria-hidden="true"></i> 重置</a>
                 </div>
             </div>
         </div>
-
     </div>
     <!-- end ibox-content -->
 </div>
-
