--- a/Views/Declare1/AirIn_List.cshtml
+++ b/Views/Declare1/AirIn_List.cshtml
@@ -1,50 +1,11 @@
 ﻿<script type="text/javascript">
-    //1 查询条件 --日期
-    var search_condition_date = [
-        { code: 'guanwujieshou', name: '查检日期', selected: true },
-        { code: 'baoruhaiguan', name: '查检放行日期' },
-        { code: 'shandankaishi', name: '熏蒸日期' },
-        { code: 'shandanwancheng', name: '删单日期' },
-        { code: 'gaidankaishi', name: '改单日期' },
-        { code: 'gaidanwancheng', name: '报检日期' },
-        { code: 'chayanzhilingxiafa', name: '报检放行日期' }
-    ];
-
-    //2 查询条件  --单据号
-    var search_code = [ 
-        { 
-            code: 'jiedan', name: 'FWO订单号', selected: true
-        },
-        { code: 'koufangxing', name: 'FO号' },
-        { code: 'lihuo', name: '总单号' },
-        { code: 'jihuabaoguan', name: '万达号' },
-        { code: 'koufangxing', name: '载货清单号' },
-        { code: 'koufangxing', name: '报检单号' },
-        { code: 'koufangxing', name: '业务编号' },
-        { code: 'shiwufangxing', name: '一程提运单号' },
-        { code: 'chuguanfeng', name: '二程提运单号' },
-        { code: 'chuguanfeng', name: '通关单号' },
-        { code: 'baoguan', name: '集装箱号' }
-    ];
-
-
     $(function () {
-        $('#searchform #search_condition_date').combobox({
-            data: search_condition_date,
-            valueField: 'code',
-            textField: 'name'
-        });
-        $('#searchform #search_code').combobox({
-            data: search_code,
-            valueField: 'code',
-            textField: 'name'
-        });
-        loadListGrid('Inspect/OnelineIn_Edit');
+        loadListGrid('Declare/AirIn_Edit');
     })
 </script>
 <div class="ibox-content">
     <div class="table-responsive">
-        <table id="datagrid" class="easyui-datagrid" title="一线进口" style="height:auto;min-height:500px;max-height:800px"
+        <table id="datagrid" class="easyui-datagrid" title="空运进口" style="height:auto;min-height:500px;max-height:800px"
                data-options="queryParams:{BUSITYPE:11}">
             <thead data-options="frozen:true">
                 <tr>
@@ -56,46 +17,48 @@
                     <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
                 </tr>
             </thead>
-            <thead> 
+            <thead>
                 <tr>
-                    <th data-options="field:'text',sortable:true">急货标志</th>
-                    <th data-options="field:'text',sortable:true">报检单号</th>
-                    <th data-options="field:'CLEARANCENO',sortable:true">通关单号</th>
-                    <th data-options="field:'text',sortable:true">法检标志</th>
-                    <th data-options="field:'text',sortable:true">通关单标志</th>
-                    <th data-options="field:'text',sortable:true">报检接单时间</th>
+                    <th data-options="field:'DECLSHEETNUM',sortable:true">报关单张数</th>
+                    <th data-options="field:'LAWCONDITION',sortable:true">是否法检</th>
+                    <th data-options="field:'ASSOCIATEPEDECLNO',sortable:true">报关单号</th>
+                    <th data-options="field:'LIDANTIME',sortable:true">理单时间</th>
+                    <th data-options="field:'BAOGUANTIME',sortable:true">报关时间</th>
                     <th data-options="field:'DANZHENGFANGXINGTIME',sortable:true">单证放行时间</th>
-                    <th data-options="field:'text',sortable:true">货物放行时间</th>
+                    <th data-options="field:'ASSOCIATETRADEWAY',sortable:true">贸易方式</th>
+                    <th data-options="field:'text',sortable:true">报关备注</th>
+                    <th data-options="field:'CLEARANCENO',sortable:true">通关单号</th>
+                    <th data-options="field:'LIDANUSERNAME',sortable:true">理单人</th>
+                    <th data-options="field:'text',sortable:true">单证齐全时间</th>
+                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
+                    <th data-options="field:'STATUS',sortable:true">实物放行状态</th>
                     <th data-options="field:'YWBH',sortable:true">业务编号</th>
-                    <th data-options="field:'text',sortable:true">报检输机时间</th>
-                    <th data-options="field:'MOSTARTTIME',sortable:true">报检制单时间</th>
-                    <th data-options="field:'text',sortable:true">报检时间</th>
-                    <th data-options="field:'text',sortable:true">报检人</th>
-                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">放行时间</th>
-                    <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">放行人</th>
                     <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
+                    <th data-options="field:'TURNPRENO',sortable:true">转关转录单号</th>
+                    <th data-options="field:'text',sortable:true">转关号</th>
+                    <th data-options="field:'text',sortable:true">OPS接单备注</th>
                     <th data-options="field:'ZUOYEDANTIME',sortable:true">作业单时间</th>
-                    <th data-options="field:'DECLSTATUS',sortable:true">报关状态</th>
-                    <th data-options="field:'INSPSTATUS',sortable:true">报检状态</th>
+                    <th data-options="field:'text',sortable:true">普货</th>
+                    <th data-options="field:'text',sortable:true">快件</th>
+                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
+                    <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
+                    <th data-options="field:'text',sortable:true">关务状态</th>
+                    <th data-options="field:'PASSMODE',sortable:true">分批放行</th>
+                    <th data-options="field:'PASSMODE',sortable:true">申请放行</th>
+                    <th data-options="field:'CUSTOMDISTRICTCODE',sortable:true">关区代码</th>
+                    <th data-options="field:'text',sortable:true">海关通关状态</th>
+                    <th data-options="field:'text',sortable:true">签收号</th>
+                    <th data-options="field:'text',sortable:true">签收人</th>
+                    <th data-options="field:'text',sortable:true">签收日期</th>
                 </tr>
             </thead>
         </table>
 
         <div id="tb">
             <div class="tb_search">
-                <div id="searchform" method="post">
+                <form id="searchform" method="post">
                     <table>
                         <tr>
-
-                            <td class="search_margin">
-                                <select class="easyui-combobox" panelheight="auto">
-                                    <option>业务类型</option>
-                                </select>
-                            </td>
-                            <td>
-                                <select class="easyui-combobox combobox_width value" id="businessin_object" panelheight="auto" name="BUSITYPE"></select>
-                            </td>
-
                             <td class="search_margin">
                                 <select class="easyui-combobox" id="search_code" panelheight="auto" name="ordercode"></select>
                             </td>
@@ -110,7 +73,14 @@
                                 <input class="easyui-textbox value" type="text" name="oprname_value" />
                             </td>
 
-
+                            <td class="search_margin">
+                                <select class="easyui-combobox" panelheight="auto">
+                                    <option>业务对象</option>
+                                </select>
+                            </td>
+                            <td>
+                                <select class="easyui-combobox combobox_width value" id="business_object" panelheight="auto" name="business_object"></select>
+                            </td>
 
                             <td class="search_margin">
                                 <select class="easyui-combobox" id="search_condition_date" panelheight="auto" name="orderdate"></select>
@@ -133,25 +103,24 @@
                                 <select class="easyui-combobox value" id="customs_state" style="width:130px" panelheight="auto" name="customs_state"></select>
                             </td>
 
-
                             <td class="search_margin">
                                 <select class="easyui-combobox" panelheight="auto">
-                                    <option>关区代码</option>
+                                    <option>是否单证放行</option>
                                 </select>
                             </td>
                             <td>
-                                <select class="easyui-combobox combobox_width value " id="CUSTOMDISTRICTCODE" name="CUSTOMDISTRICTCODE"></select>
+                                <select class="easyui-combobox combobox_width value is_check" panelheight="auto" name="is_clearance"></select>
                             </td>
                         </tr>
 
 
                     </table>
-                </div>
+                </form>
             </div>
             <div class="tb_but">
                 <div class="but_left">
-                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="search_form()"><i class="icon-refresh"></i> 批量更新</a>
-                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="reset_form()"><i class="fa fa-share-square-o" aria-hidden="true"></i> 导出</a>
+                    @*<a class="btn btn-primary btn-xs" href="javascript:void(0)"><i class="icon-search"></i> 搜索</a>
+                        <a class="btn btn-primary btn-xs" href="javascript:void(0)"><i class="icon-refresh"></i> 重置</a>*@
                 </div>
                 <div class="but_right">
                     <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="search_form()"><i class="icon-search"></i> 搜索</a>
