--- a/Views/Abnormalmodule/AbnormallogEdit.cshtml
+++ b/Views/Abnormalmodule/AbnormallogEdit.cshtml
@@ -125,12 +125,16 @@
     </div>
     <div style="text-align:center;padding:5px 0">
         <a class="btn btn-primary" href="javascript:void(0)" onclick="submitForm()">
-            <i class="icon-ok"></i> 保存
+            <i class="fa fa-floppy-o"></i> 保存
         </a>
-        <a class="btn btn-primary" href="javascript:void(0)" onclick="javascript: history.back(-1);">
+        <a class="btn btn-primary" href="javascript:void(0)" onclick="closeWin()">
             <i class="icon-reply"></i> 返回
         </a>
     </div>
 </form>
 
-
+<script>
+    function closeWin() {
+        $('#AbnormallogEdit').dialog('close');
+    }
+</script>
