--- a/Views/Inspect/OverlayBonded_Edit.cshtml
+++ b/Views/Inspect/OverlayBonded_Edit.cshtml
@@ -400,7 +400,7 @@ else
 
 <div style="text-align:center;padding:5px 0">
     <a class="btn btn-primary" href="javascript:void(0)" onclick="manySubmitForm()">
-        <i class="icon-ok"></i> 保存
+        <i class="fa fa-floppy-o"></i> 保存
     </a>
 
     <a class="btn btn-primary" href="javascript:void(0)" onclick="javascript: history.back(-1);">
