--- a/Views/Abnormalmodule/Abnormallog.cshtml
+++ b/Views/Abnormalmodule/Abnormallog.cshtml
@@ -84,7 +84,7 @@
             fitColumns: true,
             view: detailview,
             detailFormatter: function (rowIndex, rowData) {
-                return '123123';
+                return '异常1</br>异常测试';
             }
             //,
             //onDblClickCell: function (index, field, value) {
