--- a/Views/Inspect/OnelineIn_Edit.cshtml
+++ b/Views/Inspect/OnelineIn_Edit.cshtml
@@ -248,7 +248,7 @@
 
     <div style="text-align:center;padding:5px 0">
         <a class="btn btn-primary" href="javascript:void(0)" onclick="submitForm()">
-            <i class="icon-ok"></i> 保存
+            <i class="fa fa-floppy-o"></i> 保存
         </a>
 
         <a class="btn btn-primary" href="javascript:void(0)" onclick="javascript: history.back(-1);">
